fix items not fitting in container
- increase calulator-container height

--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
     padding: 1rem;
     padding-bottom: 4rem;
     width: 40rem;
-    height: 45rem;
+    height: 50rem;
     gap: 1.5rem;
     margin: 2rem auto;
 }
